[package]
name = "http-object-cache"
version = "0.1.0"
authors = ["Benno Fünfstück <benno.fuenfstueck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.2", features = ["full"] }
clap = "2.33.3"
regex = "1.4.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["stream"] }
toml = "0.5.8"
http-serve = "0.3.0"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
env_logger = "0.8.2"
log = "0.4.14"
percent-encoding = "2.1.0"
lazy_static = "1.4.0"
